first prototype (nth-child)

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </h3>
         </div>
         <div id="main-1">
-            <div class="floating-number" id="left">1</div>
+            <div class="floating-number">1</div>
             <img src="./assets/staging.png" alt="coach photo">
             <h2>
                 1. Staging
@@ -44,7 +44,7 @@
             <a href="#" class="button">Get a Quote</a>
         </div>
         <div id="main-2">
-            <div class="floating-number" id="right">2</div>
+            <div class="floating-number">2</div>
             <img src="./assets/photography.png" alt="photography">
             <h2>
                 2. Photography
@@ -61,7 +61,7 @@
 
         </div>
         <div id="main-3">
-            <div class="floating-number" id="left">3</div>
+            <div class="floating-number">3</div>
             <img src="./assets/agents.png" alt="agents">
             <h2>
                 3. Agents
@@ -79,7 +79,7 @@
 
         </div>
         <div id="main-4">
-            <div class="floating-number" id="right">4</div>
+            <div class="floating-number">4</div>
             <img src="./assets/highlights.png" alt="highlights">
             <h2>
                 4. Highlights
@@ -93,7 +93,7 @@
             </p>
         </div>
         <div id="main-5">
-            <div class="floating-number" id="left">5</div>
+            <div class="floating-number">5</div>
             <img src="./assets/keywords.png" alt="keywords">
             <h2>
                 5. Keywords
@@ -116,7 +116,7 @@
             </p>
         </div>
         <div id="main-6">
-            <div class="floating-number" id="right">6</div>
+            <div class="floating-number">6</div>
             <img src="./assets/blueprints.png" alt="blueprints">
             <h2>
                 6. Blueprints
