--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="favicon" href="./assets/favicon.ico" type="image/x-icon">
     <title>Training 3</title>
 
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./fonts/stylesheet.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
                 Check out these 5 tips for making your listing irresistible to buyers and tentants:
             </h3>
         </div>
-        <div id="main-1">
+        <div class="main-1">
             <div class="floating-number">1</div>
             <img src="./assets/staging.png" alt="coach photo">
             <h2>
@@ -43,14 +43,14 @@
             </p>
             <a href="#" class="button">Get a Quote</a>
         </div>
-        <div id="main-2">
+        <div class="main-2">
             <div class="floating-number">2</div>
             <img src="./assets/photography.png" alt="photography">
             <h2>
                 2. Photography
             </h2>
             <h3>
-                First impressions make a world of difference when trying to attract applicants
+                First impressions make a world of difference when trying to attract applicants.
             </h3>
             <p>
                 Pay close attention to lighting, time of the day, background, and angles when taking photos. If you can,
@@ -60,39 +60,39 @@
 
 
         </div>
-        <div id="main-3">
+        <div class="main-3">
             <div class="floating-number">3</div>
             <img src="./assets/agents.png" alt="agents">
             <h2>
                 3. Agents
             </h2>
             <h3>
-                Hiring a seasoned real state agent can ease your burden and maximize your outcome
+                Hiring a seasoned real state agent can ease your burden and maximize your outcome.
             </h3>
             <p>
                 A real estate agent can help with pricing, staging, negotiations and the entie selling process. Their
                 network of repair professionals, inspectors, title companies and others can be essential to getting the
-                best price for your home
+                best price for your home.
             </p>
             <a href="#" class="button">Get a Broker</a>
 
 
         </div>
-        <div id="main-4">
+        <div class="main-4">
             <div class="floating-number">4</div>
             <img src="./assets/highlights.png" alt="highlights">
             <h2>
                 4. Highlights
             </h2>
             <h3>
-                Often, potential tentants and homebuyers are overwhelmed with options
+                Often, potential tentants and homebuyers are overwhelmed with options.
             </h3>
             <p>
                 Get them to make a choice in your favor by highlighting your listing's best features. Bring out the
-                location's most useful or exciting aspects using appealing images
+                location's most useful or exciting aspects using appealing images.
             </p>
         </div>
-        <div id="main-5">
+        <div class="main-5">
             <div class="floating-number">5</div>
             <img src="./assets/keywords.png" alt="keywords">
             <h2>
@@ -101,28 +101,29 @@
             <h3>
                 Similar to our trip above, highlighting features with eye-catching keywords can emphasize the value of
                 your listing. Common termns buyers and renter tend to search for are:
-                <ul>
-                    <li><img src="./assets/tick.svg" alt="check">Air conditioning</li>
-                    <li><img src="./assets/tick.svg" alt="check">Garage/driveway</li>
-                    <li><img src="./assets/tick.svg" alt="check">Distance from transport/location</li>
-                    <li><img src="./assets/tick.svg" alt="check">Hardwood floors</li>
-                    <li><img src="./assets/tick.svg" alt="check">Stainless steel appliances</li>
-                    <li><img src="./assets/tick.svg" alt="check">City/garden view</li>
-                </ul>
             </h3>
+            <ul>
+                <li> Air conditioning</li>
+                <li> Garage/driveway</li>
+                <li> Distance from transport/location</li>
+                <li> Hardwood floors</li>
+                <li> Stainless steel appliances</li>
+                <li> City/garden view</li>
+            </ul>
             <p>
                 Ideally, your strategy should include research on your target market and neighborhood features. This
-                will help you udnerstand exactly what points to bring forward
+                will help you udnerstand exactly what points to bring forward.
             </p>
         </div>
-        <div id="main-6">
+        <div class="main-6">
             <div class="floating-number">6</div>
             <img src="./assets/blueprints.png" alt="blueprints">
             <h2>
                 6. Blueprints
             </h2>
             <h3>
-                It's been proven time and time again:
+                According to several surveys, 30-50% of shoppers and applicants said that a floor plan was integral in
+                their search.
             </h3>
             <p>
                 Not only do they help viewers fully visualize the space, but it can help them decide wether or not the
@@ -133,7 +134,6 @@
 
         </div>
         <div id="last-section">
-            <img src="./assets/bg.png" alt="">
             <div class="wrapper">
                 <h2>
                     Want more tips for optimizing your listing?
