--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
                 Check out these 5 tips for making your listing irresistible to buyers and tentants:
             </h3>
         </div>
-        <div class="main-1">
-            <div class="floating-number">1</div>
+        <div section="1">
             <img src="./assets/staging.png" alt="coach photo">
             <h2>
                 1. Staging
@@ -43,8 +42,7 @@
             </p>
             <a href="#" class="button">Get a Quote</a>
         </div>
-        <div class="main-2">
-            <div class="floating-number">2</div>
+        <div section="2">
             <img src="./assets/photography.png" alt="photography">
             <h2>
                 2. Photography
@@ -60,8 +58,7 @@
 
 
         </div>
-        <div class="main-3">
-            <div class="floating-number">3</div>
+        <div section="3">
             <img src="./assets/agents.png" alt="agents">
             <h2>
                 3. Agents
@@ -78,8 +75,7 @@
 
 
         </div>
-        <div class="main-4">
-            <div class="floating-number">4</div>
+        <div section="4">
             <img src="./assets/highlights.png" alt="highlights">
             <h2>
                 4. Highlights
@@ -92,8 +88,7 @@
                 location's most useful or exciting aspects using appealing images.
             </p>
         </div>
-        <div class="main-5">
-            <div class="floating-number">5</div>
+        <div section="5">
             <img src="./assets/keywords.png" alt="keywords">
             <h2>
                 5. Keywords
@@ -115,8 +110,7 @@
                 will help you udnerstand exactly what points to bring forward.
             </p>
         </div>
-        <div class="main-6">
-            <div class="floating-number">6</div>
+        <div section="6">
             <img src="./assets/blueprints.png" alt="blueprints">
             <h2>
                 6. Blueprints
@@ -130,18 +124,14 @@
                 size and layout will work for their belongings and lifestyle. Ready to optimize your listing?
             </p>
             <a href="#" class="button">Edit Now</a>
-
-
         </div>
         <div id="last-section">
-            <div class="wrapper">
-                <h2>
-                    Want more tips for optimizing your listing?
-                </h2>
-                <a href="" class="button">
-                    Click here
-                </a>
-            </div>
+            <h2>
+                Want more tips for optimizing your listing?
+            </h2>
+            <a href="" class="button">
+                Click here
+            </a>
         </div>
     </main>
     <footer>
